--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -16,3 +16,7 @@ requests==2.31.0
 SQLite4==0.1.1
 urllib3==2.0.4
 Werkzeug==2.3.7
+joblib==1.3.2
+pandas==2.1.4
+scikit-learn==1.2.2
+ucimlrepo==0.0.3
